# seshio

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  environment.yml  netlify.toml
backend/: .dockerignore  .env.example  alembic.ini  celery_worker.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  materials.py  notebooks.py  users.py
backend/app/core/: celery_app.py  config.py  dependencies.py
backend/app/db/: base.py
backend/app/models/: __init__.py  chunk.py  conversation.py  experiment.py  experiment_event.py  material.py  message.py  notebook.py  study.py  study_question.py  study_response.py  study_session.py  user.py
backend/app/schemas/: auth.py  material.py  notebook.py
backend/app/services/: auth.py  authorization.py  embedding.py  materials.py  notebooks.py  text_chunking.py  text_extraction.py
backend/app/tasks/: __init__.py  material_processing.py
backend/scripts/: setup_storage.py  setup_storage.sql
backend/tests/: conftest.py  test_main.py  test_notebooks.py  test_text_chunking.py  test_text_extraction.py
docs/: CHANGELOG.md  deployment.md  design.md  gamification.md  requirements.md  roadmap.md  setup.md  styles.md  tasks.md  testing.md  tone.md  vision.md
frontend/: .dockerignore  .env.local.example  .eslintrc.json  Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/auth/: page.tsx  (+1 more)
scripts/: setup.ps1  setup.sh
(+39 files in other folders)
